# qpmad

./: .clang-format  .fpm  .gitignore  .gitmodules  .travis.yml  CHANGELOG.html  CHANGELOG.rst  CHANGELOG_8rst.html  CHANGELOG_8rst_source.html  CMakeLists.txt  DEMO.html  GNUmakefile  LICENSE.html  LICENSE_source.html  Makefile  NOTICE  README  README.md  README_8md.html  active__set_8h.html  active__set_8h_source.html  annotated.html  cholesky_8h.html  cholesky_8h_source.html  chosen__constraint_8h.html  chosen__constraint_8h_source.html  classes.html  classqpmad_1_1ActiveSet-members.html  classqpmad_1_1ActiveSet.html  classqpmad_1_1CholeskyFactorization-members.html  classqpmad_1_1CholeskyFactorization.html  classqpmad_1_1ChosenConstraint-members.html  classqpmad_1_1ChosenConstraint.html  classqpmad_1_1ConstraintStatus-members.html  classqpmad_1_1ConstraintStatus.html  classqpmad_1_1FactorizationData-members.html  classqpmad_1_1FactorizationData.html  classqpmad_1_1GivensRotation-members.html  classqpmad_1_1GivensRotation.html  classqpmad_1_1InputParser-members.html  (+88 more)
.github/workflows/: master.yml  tag.yml
.make/: common.mk  qpmad.mk  ros.mk
.make/qa/: scspell.dict
cmake/: cmakeut_compiler_flags.cmake  config.h.in  options_deb.cmake  options_debug.cmake  options_default.cmake  options_householder.cmake  options_license.cmake  options_test.cmake  options_testdefault.cmake  qpmadConfig.cmake.in  qpmad_add_test.cmake
cpput/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  package.xml
cpput/cmake/: cmakeut_compiler_flags.cmake  cmakeut_list_filenames.cmake  cpputConfig.cmake.in
cpput/include/cpput/: all.h  config.h.in  exception.h.in  flags.h.in  floating_point_utils.h.in  math_utils.h.in  misc.h.in  timer.h.in  trace.h.in  traits.h.in  visibility.h.in
cpput/test/: boost_utf_common.h  inclusion.cpp
doc/: Doxyfile  DoxygenLayout.xml  doxygen_pages.dox
eigenut/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  package.xml
eigenut/cmake/: cmakeut_add_cpp_test.cmake  eigenutConfig.cmake.in
eigenut/cpput/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  package.xml
eigenut/cpput/cmake/: cmakeut_compiler_flags.cmake  cmakeut_detect_func_macro.cmake
eigenut/cpput/include/cpput/: all.h  deprecation.h.in  flags.h.in  floating_point_utils.h.in  location.h.in  print_backtrace.h.in
eigenut/cpput/test/: CMakeLists.txt  inclusion.cpp
eigenut/include/eigenut/: all.h  blockmatrix.h.in  blockmatrix_base.h.in  blockmatrix_kronecker.h.in  config.h.in  cross_product.h.in  misc.h.in  types.h.in
eigenut/test/: CMakeLists.txt  blockmatrix.cpp  inclusion.cpp  misc.cpp  utf_common.h
include/qpmad/: active_set.h  cholesky.h  chosen_constraint.h  common.h  config.h.in  constraint_status.h  exception.h  factorization_data.h  givens.h  implementation.h  input_parser.h  inverse.h  solver.h  solver_parameters.h  testing.h
make/: Makefile.common  Makefile.qpmad  Makefile.ros
matlab_octave/: Makefile  config.h  make.m  make.m.in  qpmad.m  qpmad_interface.cpp  test_basic.m  test_onlineqp.m  test_onlineqp_perf.m
matlab_octave/onlineqp_collection/: .gitignore  Makefile
qa/: scspell.dict
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+58 more)
src/: active_set.h  chosen_constraint.h  common.h  constraint_status.h  factorization_data.h  givens.h  input_parser.h  inverse.h  solver.h  testing.h
test/: CMakeLists.txt  allocation.cpp  cholesky.cpp  eigenut_misc.h  givens.cpp  hessian_solution.h  inverse.cpp  preallocation.cpp  resolve.cpp  solver.cpp  solver_fixtures.h  solver_geneq.cpp  solver_genineq.cpp  solver_objective.cpp  solver_simpleineq.cpp  utf_common.h
test/dependency/: CMakeLists.txt  demo.cpp  package.xml
tests/: CMakeLists.txt  cholesky.cpp  givens.cpp  inverse.cpp  solver.cpp  utf_common.h
