<?xml version="1.0"?>
<package format="2">
  <name>qpmad</name>
  <version>0.0.0</version>
  <description>qpmad QP solver</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>
  <license>Apache 2.0</license>

  <url type="website">https://github.com/asherikov/qpmad</url>

  <depend>eigen</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
