<?xml version="1.0"?>
<package format="2">
  <name>eigenut</name>
  <version>1.0.1</version>
  <description>Eigen utilities</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>
  <license>Apache 2.0</license>

  <url type="website">https://github.com/asherikov/eigenut</url>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
